[package]
name = "ordo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
itertools = "0.12.0"
logos = "0.13.0"
wasmi = "0.31.1"
wat = "1.0.83"

[dev-dependencies]
criterion = "0.5.1"

[[bench]]
name = "infer_benchmark"
harness = false

[[bench]]
name = "eval_benchmark"
harness = false
